# szymverb-reverb-by-walendowski

./: .gitignore  README.md
FinalProject/: DESIGN.md  EP-353-Szymon_Walendowski.key  README.md
FinalProject/jucereverb/: CMakeLists.txt
FinalProject/jucereverb/Source/: PluginProcessor.cpp  PluginProcessor.h
ProblemSet1/: HelloWorld.c  README.md
ProblemSet2/: Problem2.1.c  Problem2.2.c  Problem2.3.c  Problem2.4.c  Problem2.5.c  Problem2.6.c
ProblemSet3/: Problem3.1.c  Problem3.2.c  Problem3.3.c  Problem3.4.c  Problem3.5.c  Problem3.6.c
ProblemSet4/: Problem4.1 
ProblemSet4/Problem4.1/: CMakeLists.txt
ProblemSet4/Problem4.1/Source/: Main.cpp
ProblemSet4/Problem4.2/: CMakeLists.txt  README.md
ProblemSet4/Problem4.2/Source/: Main.cpp
ProblemSet4/Problem4.3/: CMakeLists.txt
ProblemSet4/Problem4.3/Source/: Main.cpp
ProblemSet4/Problem4.4/: CMakeLists.txt
ProblemSet4/Problem4.4/Source/: Main.cpp
ProblemSet4/Problem4.5/: CMakeLists.txt
ProblemSet4/Problem4.5/Source/: Main.cpp
ProblemSet4/Problem4.6/: CMakeLists.txt  reduct.aiff
ProblemSet4/Problem4.6/Source/: Main.cpp
szymverb/Source/: PluginEditor.cpp  PluginEditor.h
